--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     	            </div>
                 </div>
                 <div class="description text-center">
-                    <p>email: tlfxla45@naver.com</p>
+                    <p>email - tlfxla45@naver.com</p>
                 </div>
 				<div class="row">
 					<div class="col-md-6 ml-auto mr-auto">
@@ -62,14 +62,10 @@
           <div class="tab-content tab-space">
             <div class="tab-pane active text-center gallery" id="studio">
   				<div class="row">
-  					<div class="col-md-3 ml-auto">
-  					    <img src="https://images.unsplash.com/photo-1524498250077-390f9e378fc0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=83079913579babb9d2c94a5941b2e69d&auto=format&fit=crop&w=751&q=80" class="rounded">
-  						<img src="https://images.unsplash.com/photo-1528249227670-9ba48616014f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=66b8e7db17b83084f16fdeadfc93b95b&auto=format&fit=crop&w=357&q=80" class="rounded">
-  					</div>
-  					<div class="col-md-3 mr-auto">
-  						<img src="https://images.unsplash.com/photo-1521341057461-6eb5f40b07ab?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=72da2f550f8cbd0ec252ad6fb89c96b2&auto=format&fit=crop&w=334&q=80" class="rounded">
-  						<img src="https://images.unsplash.com/photo-1506667527953-22eca67dd919?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6326214b7ce18d74dde5e88db4a12dd5&auto=format&fit=crop&w=750&q=80" class="rounded">
-  					</div>
+                    Programming Language : C, C#, Java, Python, Javascript
+  					FrontEnd : React<br>
+                    BackEnd : SpringBoot<br>
+                    DB : MySQL<br>
   				</div>
   			</div>
             <div class="tab-pane text-center gallery" id="works">
