--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#works" role="tab" data-toggle="tab">
                                   <i class="material-icons">palette</i>
-                                    경력
+                                    프로젝트
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
                                   <i class="material-icons">favorite</i>
-                                    포트폴리오
+                                    학력
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#certi" role="tab" data-toggle="tab">
+                                  <i class="material-icons">camera</i>
+                                    자격증
                                 </a>
                             </li>
                           </ul>
@@ -62,7 +68,7 @@
           <div class="tab-content tab-space">
             <div class="tab-pane active text-center gallery" id="studio">
   				<div class="row">
-                    Programming Language : C, C#, Java, Python, Javascript
+                    Programming Language : C, C#, Java, Python, Javascript<br>
   					FrontEnd : React<br>
                     BackEnd : SpringBoot<br>
                     DB : MySQL<br>
@@ -70,29 +76,21 @@
   			</div>
             <div class="tab-pane text-center gallery" id="works">
       			<div class="row">
-      				<div class="col-md-3 ml-auto">
-                      <img src="https://images.unsplash.com/photo-1524498250077-390f9e378fc0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=83079913579babb9d2c94a5941b2e69d&auto=format&fit=crop&w=751&q=80" class="rounded">
-  					  <img src="https://images.unsplash.com/photo-1506667527953-22eca67dd919?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6326214b7ce18d74dde5e88db4a12dd5&auto=format&fit=crop&w=750&q=80" class="rounded">
-  					  <img src="https://images.unsplash.com/photo-1505784045224-1247b2b29cf3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ec2bdc92a9687b6af5089b335691830e&auto=format&fit=crop&w=750&q=80" class="rounded">  					</div>
-      				<div class="col-md-3 mr-auto">
-                      <img src="https://images.unsplash.com/photo-1504346466600-714572c4b726?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6754ded479383b7e3144de310fa88277&auto=format&fit=crop&w=750&q=80" class="rounded">
-                      <img src="https://images.unsplash.com/photo-1494028698538-2cd52a400b17?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=83bf0e71786922a80c420c17b664a1f5&auto=format&fit=crop&w=334&q=80" class="rounded">
-      				</div>
+                    백엔드실습과목 프로젝트 - SpotiFedia / 스포티파이 API활용 음악 검색, 별점, 댓글 웹사이트 (백엔드 개발)
+      				졸업작품 프로젝트 - 스마트 환경관리 시스템 (프론트, 백엔드 개발)
       			</div>
   			</div>
             <div class="tab-pane text-center gallery" id="favorite">
       			<div class="row">
-      				<div class="col-md-3 ml-auto">
-      				  <img src="https://images.unsplash.com/photo-1504346466600-714572c4b726?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6754ded479383b7e3144de310fa88277&auto=format&fit=crop&w=750&q=80" class="rounded">
-                      <img src="https://images.unsplash.com/photo-1494028698538-2cd52a400b17?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=83bf0e71786922a80c420c17b664a1f5&auto=format&fit=crop&w=334&q=80" class="rounded">
-      				</div>
-      				<div class="col-md-3 mr-auto">
-      				  <img src="https://images.unsplash.com/photo-1505784045224-1247b2b29cf3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ec2bdc92a9687b6af5089b335691830e&auto=format&fit=crop&w=750&q=80" class="rounded">  					
-      				  <img src="https://images.unsplash.com/photo-1524498250077-390f9e378fc0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=83079913579babb9d2c94a5941b2e69d&auto=format&fit=crop&w=751&q=80" class="rounded">
-  					  <img src="https://images.unsplash.com/photo-1506667527953-22eca67dd919?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6326214b7ce18d74dde5e88db4a12dd5&auto=format&fit=crop&w=750&q=80" class="rounded">
-      			    </div>
+                    고등학교 - (2015.03-2018.2)
+                    동양미래대학교 - 컴퓨터소프트웨어공학과 (2023.03-2027.2)
       			</div>
       		</div>
+              <div class="tab-pane text-center gallery" id="certi">
+                <div class="row">
+                    정보처리기사 - (예정)
+                </div>
+              </div>
           </div>
 
         
