--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
   				</div>
   			</div>
             <div class="tab-pane text-center gallery" id="works">
-      			<div class="row">
+      			<div class="row justify-content-center">
                     백엔드실습과목 프로젝트 - SpotiFedia / 스포티파이 API활용 음악 검색, 별점, 댓글 웹사이트 (백엔드 개발)<br>
       				졸업작품 프로젝트 - 스마트 환경관리 시스템 (프론트, 백엔드 개발)<br>
       			</div>
   			</div>
             <div class="tab-pane text-center gallery" id="favorite">
-      			<div class="row">
+      			<div class="row justify-content-center">
                     동양미래대학교 - 컴퓨터소프트웨어공학과 (2023.03-2027.2)<br>
       			</div>
       		</div>
               <div class="tab-pane text-center gallery" id="certi">
-                <div class="row">
+                <div class="row justify-content-center">
                     정보처리기사 - (예정)<br>
                 </div>
               </div>
