--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
   			</div>
             <div class="tab-pane text-center gallery" id="works">
       			<div class="row justify-content-center">
-                    백엔드실습과목 프로젝트 - SpotiFedia / 스포티파이 API활용 음악 검색, 별점, 댓글 웹사이트 (백엔드 CRUD 개발)<br>
-      				졸업작품 프로젝트 - 스마트 환경관리 시스템 / 온습도, 미세먼지 측정 및 원격제어 웹사이트 (프론트, 백엔드 개발)<br>
-                    Github URL - https://github.com/yimjongwon/project_7
+                    백엔드실습과목 프로젝트 - SpotiFedia / 스포티파이 API활용 음악 검색, 별점, 댓글 웹사이트<br>
+                    (백엔드 CRUD 개발)<br>
+                    Github URL - (예정)<br>
+      				졸업작품 프로젝트 - 스마트 환경관리 시스템 / 온습도, 미세먼지 측정 및 원격제어 웹사이트<br>
+                    (프론트, 백엔드 개발)<br>
+                    Github URL - https://github.com/yimjongwon/project_7<br>
       			</div>
   			</div>
             <div class="tab-pane text-center gallery" id="favorite">
